@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.miglayout</groupId>
 		<artifactId>miglayout-parent</artifactId>
-		<version>11.4.1</version>
+		<version>11.4.2</version>
 	</parent>
 	<artifactId>miglayout-javafx</artifactId>
     <name>MiGLayout JavaFX</name>
@@ -82,7 +82,6 @@
 				</dependencies>
 				<configuration>
 					<argLine>
-						--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED,org.testfx
 					</argLine>
 				</configuration>
 			</plugin>				
